--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
   intl: ^0.19.0
+  fluttertoast: ^8.0.7
 
 dev_dependencies:
   flutter_test:
